Added downsampler and plane/object extraction algorithms (using ADE PCLFunctions.hpp)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,13 @@ project      (pclApp)
 find_package (Qt4 REQUIRED)
 find_package (VTK REQUIRED)
 find_package (PCL 1.7.1 REQUIRED)
+find_package (OpenCV REQUIRED core imgproc highgui)
+find_package (Eigen3 REQUIRED)
 
-include_directories (${PCL_INCLUDE_DIRS})
+set(OpenCV_DIR "/usr/lib/opencv")
+
+
+include_directories (${PCL_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
 link_directories    (${PCL_LIBRARY_DIRS})
 add_definitions     (${PCL_DEFINITIONS})
 
@@ -19,6 +24,9 @@ set  (project_FORMS   ${ui_FILES})
 set  (VTK_LIBRARIES   vtkRendering vtkGraphics vtkHybrid QVTK)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") Cannot use C11 with PCL
 
+
+
+
 QT4_WRAP_CPP (project_HEADERS_MOC   ${project_HEADERS})
 QT4_WRAP_UI  (project_FORMS_HEADERS ${project_FORMS})
 
@@ -29,5 +37,5 @@ ADD_EXECUTABLE  (pclApp ${project_SOURCES}
                                 ${project_FORMS_HEADERS}
                                 ${project_HEADERS_MOC})
 
-TARGET_LINK_LIBRARIES (pclApp ${QT_LIBRARIES} ${PCL_LIBRARIES} ${VTK_LIBRARIES})
+TARGET_LINK_LIBRARIES (pclApp ${QT_LIBRARIES} ${PCL_LIBRARIES} ${VTK_LIBRARIES} ${OpenCV_LIBS})
 
